<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="18dp"
    android:paddingBottom="22dp"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/textViewGameOver"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="38dp"
                android:text="@string/textViewGameOver" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/textViewTheScore" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"
                android:gravity="center"
                android:text="5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewHighScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/textViewTheHighScore" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/textViewHighScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"
                android:gravity="center"
                android:text="10" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginBottom="5dp">

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:gravity="center"
                android:background="@drawable/roundbutton"
                android:textColor="#FFFFFF"
                android:text="@string/buttonTryAgain"
                android:id="@+id/buttonTryAgain" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginBottom="15dp">

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:gravity="center"
                android:background="@drawable/roundbutton"
                android:textColor="#FFFFFF"
                android:text="@string/buttonShareScore"
                android:id="@+id/buttonShareScore" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewExtraTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/textViewExtraTime" />
        </TableRow>
    </TableLayout>
</LinearLayout>