<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="18dp"
    android:paddingBottom="22dp"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:layout_marginRight="24dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="16dp"
                    android:textColor="#FFFFFF"
                    android:text="@string/textViewScore"
                    android:id="@+id/textViewScore" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="24dp"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="22dp"
                    android:textColor="#FFFFFF"
                    android:text="@string/textViewNivel"
                    android:id="@+id/textViewNivel" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="22dp"
                    android:textColor="#FFFFFF"
                    android:text="@string/textViewTiempoRestante"
                    android:id="@+id/textViewTiempoRestante" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:background="@drawable/blackrectangle"
                    android:layout_marginRight="24dp"
                    android:textSize="20dp"
                    android:text="0"
                    android:id="@+id/textViewTiempo" />
            </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:color/darker_gray"/>
        </TableLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView" >
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginLeft="24dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="center"
                        android:textSize="22dp"
                        android:textColor="#FFFFFF"
                        android:text="-"
                        android:id="@+id/textViewSuma1" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="22dp"
                        android:textColor="#FFFFFF"
                        android:text="+"
                        android:id="@+id/textViewSuma" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="center"
                        android:textSize="22dp"
                        android:textColor="#FFFFFF"
                        android:text="-"
                        android:id="@+id/textViewSuma2" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="center"
                        android:textSize="22dp"
                        android:textColor="#FFFFFF"
                        android:text="="
                        android:id="@+id/textViewSumaIgual" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginRight="24dp"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editTextSuma"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginLeft="24dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="center"
                        android:textSize="22dp"
                        android:textColor="#FFFFFF"
                        android:text="-"
                        android:id="@+id/textViewResta1" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="center"
                        android:textSize="22dp"
                        android:textColor="#FFFFFF"
                        android:text="-"
                        android:id="@+id/textViewResta" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="center"
                        android:textSize="22dp"
                        android:textColor="#FFFFFF"
                        android:text="-"
                        android:id="@+id/textViewResta2" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="center"
                        android:textSize="22dp"
                        android:textColor="#FFFFFF"
                        android:text="="
                        android:id="@+id/textViewRestaIgual" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginRight="24dp"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editTextResta"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginLeft="24dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="center"
                        android:textSize="22dp"
                        android:textColor="#FFFFFF"
                        android:text="-"
                        android:id="@+id/textViewMultiplicacion1" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="center"
                        android:textSize="22dp"
                        android:textColor="#FFFFFF"
                        android:text="x"
                        android:id="@+id/textViewMultiplicacion" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="center"
                        android:textSize="22dp"
                        android:textColor="#FFFFFF"
                        android:text="-"
                        android:id="@+id/textViewMultiplicacion2" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="center"
                        android:textSize="22dp"
                        android:textColor="#FFFFFF"
                        android:text="="
                        android:id="@+id/textViewMultiplicacionIgual" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginRight="24dp"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editTextMultiplicacion"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginLeft="24dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="center"
                        android:textSize="22dp"
                        android:textColor="#FFFFFF"
                        android:text="-"
                        android:id="@+id/textViewDivision1" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="center"
                        android:textSize="22dp"
                        android:textColor="#FFFFFF"
                        android:text="/"
                        android:id="@+id/textViewDivision" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="center"
                        android:textSize="22dp"
                        android:textColor="#FFFFFF"
                        android:text="-"
                        android:id="@+id/textViewDivision2" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="center"
                        android:textSize="22dp"
                        android:textColor="#FFFFFF"
                        android:text="="
                        android:id="@+id/textViewDivisionIgual" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginRight="24dp"
                        android:inputType="number"
                        android:ems="10"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:id="@+id/editTextDivision" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:color/darker_gray"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="5dp">

                    <Button
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:gravity="center"
                        android:background="@drawable/roundbutton"
                        android:textColor="#FFFFFF"
                        android:text="@string/buttonIniciar"
                        android:id="@+id/buttonIniciar" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#FFFFFF"
                        android:textSize="22dp"
                        android:text=""
                        android:id="@+id/textViewMensaje" />
                </TableRow>
            </TableLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
